---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Arrays in Cairo-M - Array in Structs and Tuples"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
struct Result {
    values: [felt; 2],
    sum: felt,
}

fn compute_result(a: felt, b: felt) -> felt {
    let tuple_ : (felt, [felt; 2]) = (a, [a, b]);
    let struct_ : Result = Result {
        values: [a, b],
        sum: a + b,
    };
    return tuple_.1[0] + struct_.values[1];
}
============================================================
Generated CASM:
compute_result:
compute_result:
compute_result_0:
   0: 4 2147483642 0 12    // [fp + 12] = [fp + -5] + 0
   1: 4 2147483643 0 13    // [fp + 13] = [fp + -4] + 0
   2: 43 12 0 _            // [fp + 0] = fp + 12
   3: 4 2147483642 0 1     // [fp + 1] = [fp + -5] + 0
   4: 4 0 0 2              // [fp + 2] = [fp + 0] + 0
   5: 4 2147483642 0 14    // [fp + 14] = [fp + -5] + 0
   6: 4 2147483643 0 15    // [fp + 15] = [fp + -4] + 0
   7: 43 14 3 _            // [fp + 3] = fp + 14
   8: 0 2147483642 2147483643 4 // [fp + 4] = [fp + -5] op [fp + -4]
   9: 4 3 0 5              // [fp + 5] = [fp + 3] + 0
  10: 4 4 0 6              // [fp + 6] = [fp + 4] + 0
  11: 8 2 0 8              // [fp + 8] = [[fp + 2] + 0] (load array element)
  12: 8 5 1 10             // [fp + 10] = [[fp + 5] + 1] (load array element)
  13: 0 8 10 2147483644    // [fp + -3] = [fp + 8] op [fp + 10]
  14: 11 _ _ _             // return
